--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.igor-suhorukov</groupId>
+            <artifactId>instagramscraper</artifactId>
+            <version>2.2</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
